--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,7 +1,42 @@
+:root{
+    --color-primary:rgb(211, 28, 211);
+    --color-primary-light:rgb(199, 90, 199);
+    --color-primary-dark:rgb(87, 5, 87);
+
+    --color-grey-light-1:rgb(114, 113, 113);
+    --color-grey-light-2:rgb(184, 184, 184);
+    --color-grey-light-3:rgb(211, 211, 211);
+    --color-grey-light-4:whitesmoke;
+
+    --color-grey-dark-1:rgb(17, 17, 17);
+    --color-grey-dark-2:rgb(8, 6, 6);
+    --color-grey-dark-3:rgb(8, 3, 3);
+
+    --shadow-box:10px 10px 50px grey;
+
+    
+
+}
 *{
     margin: 0;
     padding: 0;
 }
+*,
+::after,
+::before{
+    box-sizing: inherit;
+}
+html{
+    box-sizing: border-box;
+    font-size: 62.5%;
+}
 body{
-    background-color: red;
+    font-family: sans-serif;
+    font-weight: 400;
+    line-height: 1.6;
+    color: var(--color-grey-dark-1);
+    background-image: linear-gradient(to right bottom, var(--color-primary-dark),var(--color-primary));
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100vh;
 }
